--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,18 +5,18 @@ variables:
   MYSQL_USER: $MYSQL_USER
   MYSQL_PASSWORD: $MYSQL_PASS
 
-default:
-  image: ubuntu:20.04
+# default:
+#   image: ubuntu:20.04
 
-  services:
-    - mysql:8.0
+#   services:
+#     - mysql:8.0
 
-  before_script:
-    - apt -y update
-    - apt -y install apt-utils
-    - apt -y install net-tools python3.8 python3-pip mysql-client libmysqlclient-dev
-    - apt -y upgrade
-    - pip3 install -r requirements.txt
+#   before_script:
+#     - apt -y update
+#     - apt -y install apt-utils
+#     - apt -y install net-tools python3.8 python3-pip mysql-client libmysqlclient-dev
+#     - apt -y upgrade
+#     - pip3 install -r requirements.txt
 
 
 migrations:
